--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@
 }
 
 .userCard {
-  background-color: #d0d0d0;
+  background-color: rgba(208, 208, 208, 0.5);
   border-radius: 10px;
   height: 100px;
   display: flex;
@@ -83,22 +83,26 @@
 }
 
 .itemInfoModal {
-  top: 103%;
+  top: 105%;
   background-size: 1000px;
   background-position: bottom;
+  border: 2px ridge;
 }
 
 .overflowingItemInfoModal {
-  bottom: 103%;
+  bottom: 105%;
   background-size: 1000px;
   background-position: top;
+  border: 2px ridge;
 }
 
 .inventorySlot {
   height: 100px;
   width: 100px;
   border-radius: 10px;
-  background-color: #dedede;
+  border: 2px ridge;
+  background-color: #c0c0c0;
+  color: black;
   padding: 10px;
   cursor: pointer;
   position: relative;
@@ -115,7 +119,9 @@
   width: 100px;
   border-radius: 10px;
   padding: 10px;
-  background-color: #dedede;
+  background-color: #c0c0c0;
+  border: 2px ridge;
+  color: black;
   position: relative;
   cursor: pointer;
 }
@@ -142,6 +148,7 @@
   background-color: #c7c7c7;
   padding: 20px;
   z-index: 1;
+  color: black;
   left: 40%;
   border-radius: 10px;
 }
@@ -170,15 +177,18 @@
 }
 
 .bar {
-  width: 100%;
+  color: #daa451;
   height: 50px;
-  background-color: gray;
+  background-color: #757575;
+  border: 2px ridge;
+  border-radius: 10px;
+  overflow: hidden;
 }
 
 .healthBar {
   width: 100%;
   height: 50px;
-  background-color: green;
+  background-color: limegreen;
   z-index: 1;
 }
 
