--- a/src/App.scss
+++ b/src/App.scss
@@ -56,7 +56,7 @@ input{
 }
 
 .default-generation-display{
-    height: 200px;
+    height: 120px;
     img{
         height: 100%;
     }
@@ -70,10 +70,11 @@ input{
 .generated-items-slot{
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 10px;
     padding: 10px;
-    height: 200px;
-    width: 200px;
+    height: 120px;
+    width: 120px;
+    font-size: 13px;
     border: 2px ridge;
     border-radius: 10px;
     position: relative;
@@ -232,3 +233,37 @@ input{
     flex: 1;
 }
 
+@media (max-width: 1199.98px) {
+
+}
+
+@media (min-width: 1199.98px) {
+    .default-generation-display-lg{
+        height: 200px;
+        img{
+            height: 100%;
+        }
+    }
+
+    .generated-items-slot-lg{
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        padding: 10px;
+        height: 200px;
+        width: 200px;
+        border: 2px ridge;
+        border-radius: 10px;
+        position: relative;
+        cursor: pointer;
+        div{
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            img{
+                height: 60%;
+                object-fit: contain;
+            }
+        }
+    }
+}
